--- a/Admin/DataManager/View/Admin.fxml
+++ b/Admin/DataManager/View/Admin.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="449.0" prefWidth="671.0" stylesheets="@Css/AdminApplication.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
+<AnchorPane prefHeight="449.0" prefWidth="671.0" stylesheets="@Css/AdminApplication.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
    <children>
       <Label id="header" prefHeight="30.0" prefWidth="671.0" text="Coffe Manage" />
        <Button contentDisplay="TOP" layoutX="63.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Employee" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
@@ -18,7 +18,7 @@
                </ImageView>
            </graphic>
        </Button>
-      <Button contentDisplay="TOP" layoutX="209.0" layoutY="111.0" mnemonicParsing="false" onAction="#changSceneProduct" prefHeight="123.0" prefWidth="110.0" styleClass="button-icon" text="Product" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button contentDisplay="TOP" layoutX="209.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneProduct" prefHeight="123.0" prefWidth="110.0" styleClass="button-icon" text="Product" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
          <graphic>
             <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -27,7 +27,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="TOP" layoutX="351.0" layoutY="111.0" mnemonicParsing="false" onAction="#changSceneCategory" prefHeight="132.0" prefWidth="110.0" styleClass="button-icon" text="Category" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button contentDisplay="TOP" layoutX="351.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneCategory" prefHeight="132.0" prefWidth="110.0" styleClass="button-icon" text="Category" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
          <graphic>
             <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -36,7 +36,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="TOP" layoutX="511.0" layoutY="111.0" mnemonicParsing="false" onAction="#changSceneAccount" prefHeight="123.0" prefWidth="110.0" styleClass="button-icon" text="Account" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button contentDisplay="TOP" layoutX="511.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneAccount" prefHeight="123.0" prefWidth="110.0" styleClass="button-icon" text="Account" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
          <graphic>
             <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
