Dai pull code Huyen

--- a/Admin/DataManager/View/Admin.Product.fxml
+++ b/Admin/DataManager/View/Admin.Product.fxml
@@ -22,7 +22,7 @@
          </columns>
       </TableView>
       <Label fx:id="header" alignment="CENTER" layoutX="4.0" layoutY="1.0" prefHeight="34.0" prefWidth="915.0" text="Manage" />
-      <Button layoutX="344.0" layoutY="428.0" mnemonicParsing="false" onAction="#changeSceneAddEnvent" styleClass="button-admin">
+      <Button layoutX="344.0" layoutY="428.0" mnemonicParsing="false"  styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="-39.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                <image>
@@ -31,7 +31,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="444.0" layoutY="428.0" mnemonicParsing="false" onAction="#changeSceneEditEvent" styleClass="button-admin">
+      <Button layoutX="444.0" layoutY="428.0" mnemonicParsing="false"  styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                <image>
@@ -49,7 +49,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="71.0" layoutY="453.0" mnemonicParsing="false" onAction="#GoBack" prefHeight="48.0" prefWidth="43.0" styleClass="button-admin">
+      <Button layoutX="71.0" layoutY="453.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="43.0" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="38.0" fitWidth="76.0" layoutX="96.0" layoutY="441.0" pickOnBounds="true" preserveRatio="true">
                <image>
