--- a/Admin/DataManager/View/Admin.Account.Edit.fxml
+++ b/Admin/DataManager/View/Admin.Account.Edit.fxml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.ButtonType?>
+<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Main.Admin.DataManager.Controller.AdminAccountEditController"
-            prefHeight="400.0" prefWidth="600.0">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="480.0" styleClass="dialog" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminAccountEditController">
+    <header>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="350.0" prefWidth="480.0" stylesheets="@Css/AddApplication.css">
+            <children>
+                <Label layoutX="43.0" layoutY="48.0" prefHeight="47.0" prefWidth="127.0" styleClass="LabelTilte" text="OwnerID">
 
-</AnchorPane>
+                </Label>
+                <Label prefHeight="24.0" prefWidth="480.0" styleClass="header" text="Edit" />
+                <Label layoutX="45.0" layoutY="108.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="Name">
+
+                </Label>
+                <Label layoutX="45.0" layoutY="167.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="UserName">
+
+                </Label>
+                <Label layoutX="45.0" layoutY="224.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="Password">
+
+                </Label>
+                <TextField layoutX="212.0" layoutY="171.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter UserName" styleClass="TextFieldInput" />
+                <TextField layoutX="212.0" layoutY="232.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Password" styleClass="TextFieldInput" />
+                <Label layoutX="211.0" layoutY="113.0" prefHeight="36.0" prefWidth="200.0" styleClass="LabelTilte" text="Label" />
+                <Label layoutX="47.0" layoutY="282.0" prefHeight="46.0" prefWidth="150.0" styleClass="LabelTilte" text="Confirm Passwrd">
+                    <font>
+                        <Font size="10.0" />
+                    </font>
+                </Label>
+                <TextField layoutX="212.0" layoutY="290.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Confirm Password" styleClass="TextFieldInput" />
+            <Label layoutX="211.0" layoutY="54.0" prefHeight="36.0" prefWidth="200.0" styleClass="LabelTilte" text="Label" />
+            </children></AnchorPane>
+    </header>
+    <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
+    </content>
+    <expandableContent>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
+    </expandableContent>
+    <buttonTypes>
+        <ButtonType fx:constant="APPLY" />
+    </buttonTypes>
+    <stylesheets>
+        <URL value="@Css/AddApplication.css" />
+        <URL value="@Css/AdminApplication.css" />
+    </stylesheets>
+</DialogPane>
