--- a/Admin/DataManager/View/Admin.Category.Add.fxml
+++ b/Admin/DataManager/View/Admin.Category.Add.fxml
@@ -2,18 +2,18 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.ButtonType?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <DialogPane prefHeight="323.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminCategoryAddController">
    <content>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="420.0">
          <children>
+            <TextField layoutX="189.0" layoutY="111.0" prefHeight="44.0" prefWidth="202.0" promptText="Enter CategoryName" styleClass="TextFieldInput" />
             <Label prefHeight="43.0" prefWidth="420.0" styleClass="header" text="Add" />
-            <Label layoutX="38.0" layoutY="113.0" prefHeight="39.0" prefWidth="129.0" styleClass="LabelTilte" text="Label" />
-            <ComboBox layoutX="195.0" layoutY="114.0" prefHeight="38.0" prefWidth="167.0" styleClass="TextFieldInput" />
+            <Label layoutX="38.0" layoutY="113.0" prefHeight="39.0" prefWidth="129.0" styleClass="LabelTilte" text="Category Name" />
          </children>
       </AnchorPane>
    </content>
