--- a/Admin/DataManager/View/Admin.Employee.fxml
+++ b/Admin/DataManager/View/Admin.Employee.fxml
@@ -21,7 +21,7 @@
         </columns>
       </TableView>
       <Label fx:id="header" alignment="CENTER" prefHeight="34.0" prefWidth="915.0" text="Manage" />
-       <Button layoutX="334.0" layoutY="418.0" mnemonicParsing="false" onAction="#changeSceneAddEnvent" styleClass="button-admin">
+       <Button layoutX="334.0" layoutY="418.0" mnemonicParsing="false" onAction="#changeSceneAddEvent" styleClass="button-admin">
            <graphic>
                <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="-39.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                    <image>
@@ -39,7 +39,7 @@
                </ImageView>
            </graphic>
        </Button>
-       <Button layoutX="537.0" layoutY="421.0" mnemonicParsing="false" styleClass="button-admin">
+       <Button layoutX="537.0" layoutY="421.0" mnemonicParsing="false" onAction="#changeSceneDeleteEvent" styleClass="button-admin">
            <graphic>
                <ImageView fitHeight="46.0" fitWidth="42.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                    <image>
