--- a/Admin/DataManager/View/Admin.Product.Add.fxml
+++ b/Admin/DataManager/View/Admin.Product.Add.fxml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.ButtonType?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Main.Admin.DataManager.Controller.AdminProductAddController"
-            prefHeight="400.0" prefWidth="600.0">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500" prefWidth="500" styleClass="dialog" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminProductAddController">
+    <header>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450" prefWidth="480.0" stylesheets="@Css/AddApplication.css">
+            <children>
+                <Label layoutX="43.0" layoutY="48.0" prefHeight="47.0" prefWidth="127.0" styleClass="LabelTilte" text="Product Name">
 
-</AnchorPane>
+                </Label>
+                <Label prefHeight="24.0" prefWidth="500.0" styleClass="header" text="Add" />
+                <Label layoutX="45.0" layoutY="108.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="Category">
+
+                </Label>
+                <Label layoutX="172.0" layoutY="174.0" prefHeight="51.0" prefWidth="157.0" styleClass="labeltitlePrice" stylesheets="@Css/Application.css" text="Price">
+
+                </Label>
+                <TextField layoutX="212.0" layoutY="48.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter ProductName" styleClass="TextFieldInput" />
+                <TextField layoutX="230.0" layoutY="250.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Price" styleClass="TextFieldInput" />
+            <ComboBox layoutX="212.0" layoutY="108.0" prefHeight="36.0" prefWidth="195.0" promptText="Select Category" styleClass="TextFieldInput" />
+            <Label layoutX="54.0" layoutY="251.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size S" />
+            <TextField layoutX="230.0" layoutY="306.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Price" styleClass="TextFieldInput" />
+            <TextField layoutX="230.0" layoutY="367.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Price" styleClass="TextFieldInput" />
+            <Label layoutX="54.0" layoutY="307.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size L" />
+            <Label layoutX="54.0" layoutY="368.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size XL" />
+            </children></AnchorPane>
+    </header>
+    <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
+    </content>
+    <expandableContent>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
+    </expandableContent>
+    <buttonTypes>
+        <ButtonType fx:constant="APPLY" />
+    </buttonTypes>
+    <stylesheets>
+        <URL value="@Css/AddApplication.css" />
+        <URL value="@Css/AdminApplication.css" />
+    </stylesheets>
+</DialogPane>
