--- a/Admin/DataManager/View/Css/Application.css
+++ b/Admin/DataManager/View/Css/Application.css
@@ -24,3 +24,48 @@
     -fx-text-fill: #fff;
     -fx-text-alignment: center;
 }
+.LabelTitleDelete{
+    -fx-font-size: 18px;
+    -fx-font-weight: 700;
+    -fx-text-fill: tomato;
+    -fx-text-alignment: center;
+    -fx-alignment: center;
+}
+.LabelTitleDelete2{
+    -fx-font-size: 16;
+    -fx-alignment: center;
+    -fx-text-fill: grey;
+}
+
+#dialogDelete .button{
+    -fx-alignment: center;
+    -fx-background-radius: 10px;
+    -fx-background-color: #fca311;
+    -fx-text-fill: #fff;
+    -fx-font-weight: 600;
+    -fx-effect: dropshadow(three-pass-box, #111,5,0,4,2);
+}
+#dialogDelete .button:hover{
+    -fx-background-color: tomato;
+}
+.labeltitlePrice{
+    -fx-text-fill: #fff;
+    -fx-font-size: 25px;
+    -fx-font-weight: 800;
+    -fx-highlight-text-fill: red;
+    -fx-alignment: center;
+    -fx-text-alignment: center;
+    -fx-background-color: transparent;
+    -fx-effect: dropshadow(three-pass-box, #48cae4,3,1,1,0);
+    -fx-border-color:#48cae4 ;
+    -fx-border-radius: 15;
+}
+.pricewithsize{
+    -fx-font-size: 18px;
+    -fx-font-weight: 700;
+    -fx-background-color: #023e8a;
+    -fx-background-radius: 15;
+    -fx-text-fill: #fff;
+    -fx-alignment: center;
+    -fx-effect: dropshadow(three-pass-box, #48cae4,3,1,1,0);
+}
