--- a/Admin/DataManager/View/Admin.Category.fxml
+++ b/Admin/DataManager/View/Admin.Category.fxml
@@ -29,7 +29,7 @@
             <URL value="@Css/AddApplication.css" />
          </stylesheets>
       </Label>
-      <Button layoutX="185.0" layoutY="391.0" mnemonicParsing="false" onAction="#changeSceneEditEvent" styleClass="button-admin">
+      <Button layoutX="185.0" layoutY="391.0" mnemonicParsing="false" onAction="#changeSceneAddEvent" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="-39.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                <image>
@@ -43,7 +43,7 @@
             <URL value="@Css/AddApplication.css" />
          </stylesheets>
       </Button>
-      <Button layoutX="278.0" layoutY="391.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button layoutX="278.0" layoutY="391.0" mnemonicParsing="false" onAction="#changeSceneEditEvent" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                <image>
@@ -57,7 +57,7 @@
             <URL value="@Css/AddApplication.css" />
          </stylesheets>
       </Button>
-      <Button layoutX="375.0" layoutY="393.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button layoutX="375.0" layoutY="393.0" mnemonicParsing="false" onAction="#changeSceneDeleteEvent" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="46.0" fitWidth="42.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                <image>
