--- a/Admin/DataManager/View/Admin.Delete.fxml
+++ b/Admin/DataManager/View/Admin.Delete.fxml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.ButtonType?>
+<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Main.Admin.DataManager.Controller.AdminDeleteController"
-            prefHeight="400.0" prefWidth="600.0" >
+<DialogPane id="dialogDelete" prefHeight="260.0" prefWidth="343.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminDeleteController">
+    <content>
+        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="420.0" styleClass="dialogDelete">
+         <children>
+            <Label prefHeight="31.0" prefWidth="420.0" styleClass="header" text="Delete" />
+            <ImageView fitHeight="117.0" fitWidth="122.0" layoutX="152.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Icon/alert.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="150.0" layoutY="168.0" prefHeight="35.0" prefWidth="123.0" styleClass="LabelTitleDelete" text="Are you sure?" />
+            <Label layoutX="66.0" layoutY="203.0" prefHeight="27.0" prefWidth="289.0" styleClass="LabelTitleDelete2" text="You will not be able to recover this file!" />
+         </children>
+         <stylesheets>
+            <URL value="@Css/AddApplication.css" />
+            <URL value="@Css/AdminApplication.css" />
+         </stylesheets></AnchorPane>
+    </content>
+    <buttonTypes>
+        <ButtonType fx:constant="YES" />
+      <ButtonType fx:constant="NO" />
+    </buttonTypes>
+   <stylesheets>
+      <URL value="@Css/Application.css" />
+      <URL value="@Css/AdminApplication.css" />
+      <URL value="@Css/AddApplication.css" />
+   </stylesheets>
 
-</AnchorPane>
+</DialogPane>
