--- a/Admin/DataManager/View/Admin.Employee.Add.fxml
+++ b/Admin/DataManager/View/Admin.Employee.Add.fxml
@@ -7,42 +7,42 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.ButtonType?>
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="348.0" prefWidth="480.0" styleClass="dialog" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminEmployeeAddController">
+   <header>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="308.0" prefWidth="480.0" stylesheets="@Css/AddApplication.css">
+         <children>
+            <Label layoutX="43.0" layoutY="48.0" prefHeight="47.0" prefWidth="127.0" styleClass="LabelTilte" text="Name">
 
-<AnchorPane prefHeight="514.0" prefWidth="538.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminEmployeeAddController">
-   <children>
-      <Label prefHeight="32.0" prefWidth="538.0" styleClass="header" text="Add Employee" />
-      <Label layoutX="80.0" layoutY="77.0" prefHeight="32.0" prefWidth="102.0" styleClass="LabelTilte" text="Name" />
-      <Label layoutX="80.0" layoutY="151.0" prefHeight="32.0" prefWidth="102.0" styleClass="LabelTilte" text="Phone" />
-      <Label layoutX="80.0" layoutY="216.0" prefHeight="32.0" prefWidth="102.0" styleClass="LabelTilte" text="Position" />
-      <Label layoutX="80.0" layoutY="287.0" prefHeight="32.0" prefWidth="102.0" styleClass="LabelTilte" text="WorkType" />
-      <TextField layoutX="256.0" layoutY="77.0" prefHeight="32.0" prefWidth="169.0" promptText="Enter Name" styleClass="TextFieldInput" />
-      <TextField layoutX="256.0" layoutY="151.0" prefHeight="32.0" prefWidth="169.0" promptText="Enter NumberPhone" styleClass="TextFieldInput" />
-      <TextField layoutX="256.0" layoutY="216.0" prefHeight="32.0" prefWidth="169.0" promptText="Enter Position" styleClass="TextFieldInput" />
-      <TextField layoutX="256.0" layoutY="287.0" prefHeight="32.0" prefWidth="169.0" promptText="Enter WorkType" styleClass="TextFieldInput" />
+            </Label>
+            <Label prefHeight="24.0" prefWidth="480.0" styleClass="header" text="Edit" />
+            <Label layoutX="45.0" layoutY="108.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="Phone">
 
-      <Button layoutX="241.0" layoutY="352.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="68.0" styleClass="button-admin">
-         <graphic>
-            <ImageView fitHeight="55.0" fitWidth="53.0" layoutX="351.0" layoutY="341.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../Icon/save.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Button layoutX="33.0" layoutY="429.0" mnemonicParsing="false" onAction="#GoBack" prefHeight="71.0" prefWidth="68.0" styleClass="button-admin">
-         <graphic>
-            <ImageView fitHeight="55.0" fitWidth="53.0" layoutX="351.0" layoutY="341.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
-               <image>
-                  <Image url="@../../../Icon/backnow.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
+            </Label>
+            <Label layoutX="45.0" layoutY="167.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="Position">
 
-   </children>
+            </Label>
+            <Label layoutX="45.0" layoutY="224.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="WorkType">
+
+            </Label>
+            <TextField  layoutX="212.0" layoutY="48.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+            <TextField  layoutX="212.0" layoutY="108.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+            <TextField  layoutX="212.0" layoutY="171.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+            <TextField  layoutX="212.0" layoutY="232.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
+         </children></AnchorPane>
+   </header>
+   <content>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
+   </content>
+   <expandableContent>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
+   </expandableContent>
+   <buttonTypes>
+      <ButtonType fx:constant="APPLY" />
+   </buttonTypes>
    <stylesheets>
       <URL value="@Css/AddApplication.css" />
-      <URL value="@Css/Application.css" />
       <URL value="@Css/AdminApplication.css" />
    </stylesheets>
-</AnchorPane>
+</DialogPane>
