--- a/Admin/DataManager/View/Admin.Product.fxml
+++ b/Admin/DataManager/View/Admin.Product.fxml
@@ -5,24 +5,26 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminProductController">
+<AnchorPane prefHeight="599.0" prefWidth="1090.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminProductController">
    <children>
-      <TableView fx:id="table" layoutX="166.0" layoutY="92.0" prefHeight="323.0" prefWidth="619.0" styleClass="table-view">
+      <TableView fx:id="table" layoutX="14.0" layoutY="106.0" prefHeight="400.0" prefWidth="1057.0" styleClass="table-view">
          <columns>
-            <TableColumn fx:id="idColumn" prefWidth="73.0" styleClass="column-header-background" text="ID" />
-            <TableColumn fx:id="nameColumn" prefWidth="241.0" styleClass="column-header-background" text="Name" />
-            <TableColumn fx:id="phoneColumn" prefWidth="120.0" styleClass="column-header-background" text="Phone" />
-            <TableColumn fx:id="PositionColumn" prefWidth="82.0" styleClass="column-header-background" text="Position" />
-            <TableColumn fx:id="typeColumn" prefWidth="102.0" styleClass="column-header-background" text="WorkType" />
+            <TableColumn prefWidth="62.0" text="ID" />
+            <TableColumn prefWidth="293.0" text="ProductName" />
+            <TableColumn prefWidth="264.0" text="Category" />
+            <TableColumn prefWidth="171.0" text="Size S" />
+            <TableColumn prefWidth="142.0" text="Size L" />
+            <TableColumn prefWidth="124.0" text="Size XL" />
          </columns>
       </TableView>
-      <Label fx:id="header" alignment="CENTER" layoutX="4.0" layoutY="1.0" prefHeight="34.0" prefWidth="915.0" text="Manage" />
-      <Button layoutX="344.0" layoutY="428.0" mnemonicParsing="false"  styleClass="button-admin">
+      <Label fx:id="header" alignment="CENTER" layoutX="-3.0" layoutY="1.0" prefHeight="34.0" prefWidth="1090.0" text="Manage" />
+      <Button layoutX="376.0" layoutY="513.0" mnemonicParsing="false" onAction="#changeSceneAddEvent" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="-39.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                <image>
@@ -31,25 +33,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="444.0" layoutY="428.0" mnemonicParsing="false"  styleClass="button-admin">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
-               <image>
-                  <Image url="@../../../Icon/edit.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Button layoutX="547.0" layoutY="431.0" mnemonicParsing="false" styleClass="button-admin">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="42.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
-               <image>
-                  <Image url="@../../../Icon/delete.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Button layoutX="71.0" layoutY="453.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="43.0" styleClass="button-admin">
+      <Button layoutX="26.0" layoutY="527.0" mnemonicParsing="false" onAction="#GoBack" prefHeight="48.0" prefWidth="43.0" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="38.0" fitWidth="76.0" layoutX="96.0" layoutY="441.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -58,6 +42,39 @@
             </ImageView>
          </graphic>
       </Button>
+      <Button layoutX="555.0" layoutY="513.0" mnemonicParsing="false" onAction="#changeSceneEditEvent" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
+               <image>
+                  <Image url="@../../../Icon/edit.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="724.0" layoutY="515.0" mnemonicParsing="false" onAction="#changeSceneDeleteEvent" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="46.0" fitWidth="42.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
+               <image>
+                  <Image url="@../../../Icon/delete.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <TextField layoutX="37.0" layoutY="49.0" prefHeight="34.0" prefWidth="235.0" promptText="Search  here">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Button layoutX="272.0" layoutY="48.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="33.0" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="34.0" fitWidth="28.0" layoutX="283.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Icon/search2.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+
    </children>
    <stylesheets>
       <URL value="@Css/AddApplication.css" />
