--- a/Admin/DataManager/View/Css/AdminApplication.css
+++ b/Admin/DataManager/View/Css/AdminApplication.css
@@ -21,14 +21,12 @@
     -fx-effect: dropshadow(three-pass-box, #111,3,1,0,0);
     -fx-text-fill: #fff;
 }
-.button-icon{
+.button-admin{
     -fx-background-color: transparent;
-    -fx-text-fill: #fff;
-    -fx-font-size: 16px;
-    -fx-effect: dropshadow(three-pass-box, #48cae4,3,1,1,0);
+
 }
-.button-icon:hover{
-    -fx-opacity: 0.8;
+.button-admin:hover{
+    -fx-effect: dropshadow(three-pass-box, #5F50F1,10,0,0,0);
 }
 .button-bc{
     -fx-background-color: transparent;
