--- a/Admin/IngredientsManager/View/IngredientOrder.fxml
+++ b/Admin/IngredientsManager/View/IngredientOrder.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,7 +15,7 @@
 <AnchorPane prefHeight="449.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.IngredientOrder">
    <children>
       <Label fx:id="header" contentDisplay="CENTER" prefHeight="30.0" prefWidth="671.0" text="Warehouse Management" textAlignment="CENTER" />
-      <TextField layoutX="21.0" layoutY="44.0" prefHeight="26.0" prefWidth="220.0" promptText="Search...">
+      <TextField layoutX="14.0" layoutY="44.0" prefHeight="26.0" prefWidth="187.0" promptText="Search...">
          <opaqueInsets>
             <Insets />
          </opaqueInsets></TextField>
@@ -31,49 +32,78 @@
             <Insets />
          </opaqueInsets>
       </TableView>
-      <ImageView fitHeight="43.0" fitWidth="43.0" layoutX="208.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true" styleClass="button-icon">
-         <image>
-            <Image url="@../../../Icon/addproduct.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="43.0" fitWidth="43.0" layoutX="309.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true" styleClass="button-icon">
-         <image>
-            <Image url="@../../../Icon/edit.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="43.0" fitWidth="43.0" layoutX="405.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true" styleClass="button-icon">
-         <image>
-            <Image url="@../../../Icon/delete.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="37.0" fitWidth="34.0" layoutX="21.0" layoutY="405.0" pickOnBounds="true" preserveRatio="true" styleClass="button-icon">
-         <image>
-            <Image url="@../../../Icon/backnow.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="35.0" fitWidth="40.0" layoutX="257.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" styleClass="button-icon">
-         <image>
-            <Image url="@../../../Icon/note.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="38.0" fitWidth="40.0" layoutX="424.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true" styleClass="button-icon">
-         <image>
-            <Image url="@../../../Icon/box.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="42.0" fitWidth="38.0" layoutX="553.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true" styleClass="button-icon">
-         <image>
-            <Image url="@../../../Icon/boxplus.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="292.0" layoutY="52.0" prefWidth="109.0" styleClass="label-icon" text="Import Confirmation" />
-      <Label layoutX="463.0" layoutY="53.0" styleClass="label-icon" text="Ordered  List" />
-      <Label layoutX="588.0" layoutY="53.0" styleClass="label-icon" text="New Order" />
-      <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="216.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../Icon/search.png" />
-         </image>
-      </ImageView>
+      <Button layoutX="14.0" layoutY="398.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0">
+         <graphic>
+            <ImageView fitHeight="37.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
+               <image>
+                  <Image url="@../../../Icon/backnow.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="253.0" layoutY="40.0" mnemonicParsing="false" text="Import Confirmation">
+         <graphic>
+            <ImageView fitHeight="35.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
+               <image>
+                  <Image url="@../../../Icon/note.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="421.0" layoutY="38.0" mnemonicParsing="false" text="Ordered  List" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="38.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" >
+               <image>
+                  <Image url="@../../../Icon/box.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="552.0" layoutY="38.0" mnemonicParsing="false" text="New Order" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="42.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true" >
+               <image>
+                  <Image url="@../../../Icon/boxplus.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="201.0" layoutY="44.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="26.0">
+         <graphic>
+            <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Icon/search.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="217.0" layoutY="387.0" mnemonicParsing="false" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true" >
+               <image>
+                  <Image url="@../../../Icon/addproduct.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="310.0" layoutY="387.0" mnemonicParsing="false" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Icon/edit.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button layoutX="399.0" layoutY="387.0" mnemonicParsing="false" styleClass="button-admin">
+         <graphic>
+            <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Icon/delete.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
    <cursor>
       <Cursor fx:constant="HAND" />
