--- a/Admin/IngredientsManager/View/Css/WarehouseApplication.css
+++ b/Admin/IngredientsManager/View/Css/WarehouseApplication.css
@@ -22,7 +22,6 @@
 .button-bc:hover{
     -fx-opacity: 0.8;
 }
-
 .table-view{
     -fx-effect: dropshadow(three-pass-box, #111,10,0,0,0);
 }
@@ -34,4 +33,13 @@
 .table-view .column-header .label{
     -fx-text-fill: #fff;
     -fx-text-alignment: center;
+}
+
+.title-form {
+    -fx-font-weight: 900;
+    -fx-background-color: linear-gradient(to right, #7474bf, #348ac7);;
+    -fx-padding: 4px 8px;
+    -fx-text-fill: #fff;
+    -fx-border: solid;
+    -fx-background-radius: 6px;
 }
