--- a/Admin/IngredientsManager/View/IngredientOrder.fxml
+++ b/Admin/IngredientsManager/View/IngredientOrder.fxml
@@ -12,36 +12,28 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="449.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.IngredientOrder">
+<AnchorPane prefHeight="537.0" prefWidth="832.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.IngredientOrder">
    <children>
-      <Label fx:id="header" contentDisplay="CENTER" prefHeight="30.0" prefWidth="671.0" text="Warehouse Management" textAlignment="CENTER" />
-      <TextField layoutX="14.0" layoutY="44.0" prefHeight="26.0" prefWidth="187.0" promptText="Search...">
+      <Label fx:id="header" contentDisplay="CENTER" prefHeight="30.0" prefWidth="832.0" text="Warehouse Management" textAlignment="CENTER" />
+      <TextField layoutX="14.0" layoutY="44.0" prefHeight="26.0" prefWidth="274.0" promptText="Search...">
          <opaqueInsets>
             <Insets />
          </opaqueInsets></TextField>
-      <TableView layoutX="46.0" layoutY="91.0" prefHeight="286.0" prefWidth="568.0">
+      <TableView layoutX="15.0" layoutY="97.0" prefHeight="363.0" prefWidth="802.0">
         <columns>
-          <TableColumn prefWidth="49.0" text="ID" />
-          <TableColumn prefWidth="146.0" text="Name" />
-            <TableColumn prefWidth="89.0" text="Import Price" />
-            <TableColumn prefWidth="93.0" text="Category" />
-            <TableColumn prefWidth="96.0" text="Supplier" />
-            <TableColumn prefWidth="94.0" text="Quantity" />
+          <TableColumn prefWidth="80.27553462982178" text="ID" />
+          <TableColumn prefWidth="353.72447204589844" text="Name" />
+            <TableColumn prefWidth="103.76336669921875" text="Import Price" />
+            <TableColumn prefWidth="91.66812133789062" text="Category" />
+            <TableColumn prefWidth="93.255126953125" text="Supplier" />
+            <TableColumn prefWidth="80.7449951171875" text="Quantity" />
         </columns>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </TableView>
-      <Button layoutX="14.0" layoutY="398.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0">
-         <graphic>
-            <ImageView fitHeight="37.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
-               <image>
-                  <Image url="@../../../Icon/backnow.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Button layoutX="253.0" layoutY="40.0" mnemonicParsing="false" text="Import Confirmation">
+      <Button layoutX="14.0" layoutY="398.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0" styleClass="button-admin" />
+      <Button layoutX="352.0" layoutY="41.0" mnemonicParsing="false" styleClass="button-admin" text="Import Confirmation">
          <graphic>
             <ImageView fitHeight="35.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                <image>
@@ -50,25 +42,25 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="421.0" layoutY="38.0" mnemonicParsing="false" text="Ordered  List" styleClass="button-admin">
+      <Button layoutX="528.0" layoutY="40.0" mnemonicParsing="false" styleClass="button-admin" text="Ordered  List">
          <graphic>
-            <ImageView fitHeight="38.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" >
+            <ImageView fitHeight="38.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Icon/box.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="552.0" layoutY="38.0" mnemonicParsing="false" text="New Order" styleClass="button-admin">
+      <Button layoutX="671.0" layoutY="40.0" mnemonicParsing="false" styleClass="button-admin" text="New Order">
          <graphic>
-            <ImageView fitHeight="42.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true" >
+            <ImageView fitHeight="42.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Icon/boxplus.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="201.0" layoutY="44.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="26.0">
+      <Button layoutX="283.0" layoutY="41.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="36.0" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -77,16 +69,21 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="217.0" layoutY="387.0" mnemonicParsing="false" styleClass="button-admin">
+      <ImageView fitHeight="37.0" fitWidth="34.0" layoutX="14.0" layoutY="489.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Icon/backnow.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="282.0" layoutY="471.0" mnemonicParsing="false" styleClass="button-admin">
          <graphic>
-            <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true" >
+            <ImageView fitHeight="43.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Icon/addproduct.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="310.0" layoutY="387.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button layoutX="405.0" layoutY="469.0" mnemonicParsing="false" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -95,7 +92,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="399.0" layoutY="387.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button layoutX="524.0" layoutY="468.0" mnemonicParsing="false" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
                <image>
