--- a/Admin/DataManager/View/Admin.Category.Edit.fxml
+++ b/Admin/DataManager/View/Admin.Category.Edit.fxml
@@ -2,19 +2,18 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.ButtonType?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.scene.control.TextField?>
 <DialogPane prefHeight="323.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminCategoryEditController">
 <content>
     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="420.0">
         <children>
             <Label prefHeight="43.0" prefWidth="420.0" styleClass="header" text="Edit" />
             <Label layoutX="38.0" layoutY="113.0" prefHeight="39.0" prefWidth="129.0" styleClass="LabelTilte" text="Category Name" />
-            <TextField layoutX="189.0" layoutY="111.0" prefHeight="44.0" prefWidth="202.0" promptText="Enter CategoryName" styleClass="TextFieldInput" />
+            <TextField fx:id="textName" layoutX="189.0" layoutY="111.0" prefHeight="44.0" prefWidth="202.0" promptText="Enter CategoryName" styleClass="TextFieldInput" />
         </children>
     </AnchorPane>
 </content>
