--- a/Admin/DataManager/View/Admin.fxml
+++ b/Admin/DataManager/View/Admin.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="449.0" prefWidth="671.0" stylesheets="@Css/AdminApplication.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
+<AnchorPane prefHeight="449.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
    <children>
       <Label id="header" prefHeight="30.0" prefWidth="671.0" text="Coffe Manage" />
        <Button contentDisplay="TOP" layoutX="63.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Employee" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
@@ -93,6 +94,10 @@
       </Button>
       <Label layoutX="500.0" layoutY="54.0" prefHeight="30.0" prefWidth="80.0" styleClass="labelUserName" text="UserName" />
 
-
    </children>
+   <stylesheets>
+      <URL value="@Css/AdminApplication.css" />
+      <URL value="@Css/AddApplication.css" />
+      <URL value="@Css/Application.css" />
+   </stylesheets>
 </AnchorPane>
