--- a/Admin/DataManager/View/Admin.Product.Add.fxml
+++ b/Admin/DataManager/View/Admin.Product.Add.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500" prefWidth="500" styleClass="dialog" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminProductAddController">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500" prefWidth="500" styleClass="dialog" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Main.Admin.DataManager.Controller.AdminProductAddController"
+fx:id="dialogCategoryAdd ">
     <header>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450" prefWidth="480.0" stylesheets="@Css/AddApplication.css">
             <children>
@@ -28,8 +30,8 @@
             <Label layoutX="54.0" layoutY="251.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size S" />
             <TextField layoutX="230.0" layoutY="306.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Price" styleClass="TextFieldInput" />
             <TextField layoutX="230.0" layoutY="367.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Price" styleClass="TextFieldInput" />
-            <Label layoutX="54.0" layoutY="307.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size L" />
-            <Label layoutX="54.0" layoutY="368.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size XL" />
+            <Label layoutX="54.0" layoutY="307.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size M" />
+            <Label layoutX="54.0" layoutY="368.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size L" />
             </children></AnchorPane>
     </header>
     <content>
