--- a/Admin/DataManager/View/Admin.Product.Edit.fxml
+++ b/Admin/DataManager/View/Admin.Product.Edit.fxml
@@ -28,8 +28,8 @@
                 <Label layoutX="54.0" layoutY="251.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size S" />
                 <TextField layoutX="230.0" layoutY="306.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
                 <TextField layoutX="230.0" layoutY="367.0" prefHeight="38.0" prefWidth="198.0" styleClass="TextFieldInput" />
-                <Label layoutX="54.0" layoutY="307.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size L" />
-                <Label layoutX="54.0" layoutY="368.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size XL" />
+                <Label layoutX="54.0" layoutY="307.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size M" />
+                <Label layoutX="54.0" layoutY="368.0" prefHeight="36.0" prefWidth="106.0" styleClass="pricewithsize" stylesheets="@Css/Application.css" text="Size L" />
             </children></AnchorPane>
     </header>
     <content>
