--- a/Admin/DataManager/View/Admin.fxml
+++ b/Admin/DataManager/View/Admin.fxml
@@ -28,7 +28,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="TOP" layoutX="351.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneCategory" prefHeight="132.0" prefWidth="110.0" styleClass="button-icon" text="Category" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button fx:id="buttonCategory" contentDisplay="TOP" layoutX="351.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneCategory" prefHeight="132.0" prefWidth="110.0" styleClass="button-icon" text="Category" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
          <graphic>
             <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -93,7 +93,7 @@
          </graphic>
       </Button>
       <Label layoutX="500.0" layoutY="54.0" prefHeight="30.0" prefWidth="80.0" styleClass="labelUserName" text="UserName" />
-
+      
    </children>
    <stylesheets>
       <URL value="@Css/AdminApplication.css" />
