--- a/Admin/IngredientsManager/View/FormIngredientOrder.fxml
+++ b/Admin/IngredientsManager/View/FormIngredientOrder.fxml
@@ -48,7 +48,7 @@
       </Label>
       <DatePicker layoutX="519.0" layoutY="101.0" prefHeight="26.0" prefWidth="193.0" promptText="Choose Date" />
       <Button layoutX="345.0" layoutY="487.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" styleClass="btn-confirm" text="Send" />
-      <Button layoutX="5.0" layoutY="480.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button fx:id="newOrderBtn" layoutX="5.0" layoutY="480.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="32.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
                <image>
