--- a/Admin/IngredientsManager/View/IngredientOrder.fxml
+++ b/Admin/IngredientsManager/View/IngredientOrder.fxml
@@ -25,7 +25,7 @@
           <TableColumn prefWidth="353.72447204589844" text="Name" />
             <TableColumn prefWidth="103.76336669921875" text="Import Price" />
             <TableColumn prefWidth="91.66812133789062" text="Category" />
-            <TableColumn prefWidth="93.255126953125" text="Supplier" />
+            <TableColumn prefWidth="93.255126953125" text="Producer" />
             <TableColumn prefWidth="80.7449951171875" text="Quantity" />
         </columns>
          <opaqueInsets>
@@ -69,7 +69,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="282.0" layoutY="471.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button fx:id="addIngredientBtn" layoutX="282.0" layoutY="471.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="43.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -78,7 +78,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="405.0" layoutY="469.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button fx:id="editIngredientBtn" layoutX="405.0" layoutY="469.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -87,7 +87,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="524.0" layoutY="468.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button fx:id="removeIngredientBtn" layoutX="524.0" layoutY="468.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="43.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -96,7 +96,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="3.0" layoutY="488.0" mnemonicParsing="false" styleClass="button-admin">
+      <Button fx:id="backAdminBtn" layoutX="3.0" layoutY="488.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="37.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
                <image>
