add Delete Button in ItemChoices and change color

--- a/Sales/Sales/View/SalesStyle.css
+++ b/Sales/Sales/View/SalesStyle.css
@@ -45,3 +45,7 @@
     -fx-effect: dropshadow(three-pass-box, #111,5,0,4,2);
 }
 
+#searchIcon{
+    -fx-effect: dropshadow(three-pass-box, #111,5,0,4,2);
+}
+
