--- a/Sales/Sales/View/OrderFactory.css
+++ b/Sales/Sales/View/OrderFactory.css
@@ -1,19 +1,28 @@
 .label{
-    -fx-border-color: rgba(150, 79, 26, 0.96);
-    -fx-text-fill: rgba(86, 37, 3, 0.96);
+    -fx-border-color: #5F50F1;
     -fx-border-radius: 5;
-    -fx-font-weight: 600;
+    -fx-text-fill: #5F50F1;
+    -fx-background-color: white;
+    -fx-background-radius: 5;
+    -fx-font-weight: 700;
     -fx-font-size: 14;
     -fx-pref-width: 140;
     -fx-padding: 5,0,0,0;
-    -fx-effect: dropshadow(three-pass-box, rgba(222, 189, 165, 0.96),5,0,2,0);
+    -fx-effect: dropshadow(three-pass-box, #5F50F1,5,0,1,0);
+}
+.combo-box .list-cell:filled:selected{
+    -fx-background-color: #5F50F1;
+    -fx-text-fill: white;
+    -fx-font-weight: 700;
 }
 .combo-box{
-    -fx-background-color: rgba(245, 142, 69, 0.96);
     -fx-padding: 4,0,0,0;
+    -fx-background-color: #5F50F1;
 }
+
+
 #cont{
-    -fx-background-color: rgba(229, 164, 117, 0.2);
+    -fx-background-color: white;
     -fx-pref-width: 150;
 }
 .root{
@@ -23,7 +32,7 @@
 .button{
     -fx-background-color: White;
     -fx-text-fill: rgba(150, 79, 26, 0.96);
-    -fx-padding: 2,0,0,0;
+    -fx-padding: 1,0,0,0;
     -fx-border-radius: 10;
     -fx-font-weight: 700;
     -fx-font-size: 14;
@@ -31,12 +40,13 @@
 
 #control{
     -fx-alignment: center;
-    -fx-background-color: rgba(150, 79, 26, 0.96);
+    -fx-background-color: #5F50F1;
+    -fx-pref-height: 50;
 }
 .text-field{
     -fx-background-color: White;
-    -fx-text-fill: rgba(150, 79, 26, 0.96);
+    -fx-text-fill: #5F50F1;
     -fx-padding: 3,0,0,0;
     -fx-border-radius: 10;
-    -fx-font-weight: 600;
+    -fx-font-weight: 700;
 }
