Huyen pull code

--- a/Admin/IngredientsManager/View/IngredientEdit.fxml
+++ b/Admin/IngredientsManager/View/IngredientEdit.fxml
@@ -6,17 +6,17 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="308.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="308.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.IngredientEditController">
    <children>
       <Label fx:id="header" layoutY="2.0" prefHeight="24.0" prefWidth="480.0" text="Edit" />
       <Label layoutX="37.0" layoutY="43.0" prefHeight="47.0" prefWidth="146.0" styleClass="title-form" text="Name" />
       <Label layoutX="35.0" layoutY="103.0" prefHeight="46.0" prefWidth="146.0" styleClass="title-form" text="Category" />
       <Label layoutX="36.0" layoutY="162.0" prefHeight="46.0" prefWidth="146.0" styleClass="title-form" text="Import Price (expected)" />
       <Label layoutX="36.0" layoutY="219.0" prefHeight="46.0" prefWidth="146.0" styleClass="title-form" text="Producer" />
-      <TextField layoutX="226.0" layoutY="43.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
-      <TextField layoutX="226.0" layoutY="103.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
-      <TextField layoutX="226.0" layoutY="166.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
-      <TextField layoutX="226.0" layoutY="227.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
+      <TextField fx:id="nameTxtField" layoutX="226.0" layoutY="43.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
+      <TextField fx:id="typeTxtField" layoutX="226.0" layoutY="103.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
+      <TextField fx:id="priceTxtField" layoutX="226.0" layoutY="166.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
+      <TextField fx:id="producerTxtField" layoutX="226.0" layoutY="227.0" prefHeight="38.0" prefWidth="198.0" styleClass="txt-field-input" />
       <Button layoutX="395.0" layoutY="275.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="70.0" styleClass="btn-confirm" text="Apply" />
    </children>
    <stylesheets>
